ansible/roles/kind/files/ingress-test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: ingress-test

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ingress-test
  name: ingress-test
  namespace: ingress-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test
  template:
    metadata:
      labels:
        app: ingress-test
    spec:
      containers:
      - image: hashicorp/http-echo:0.2.3
        name: http-echo
        args:
        - "-text=OK"
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-test
  namespace: ingress-test
spec:
  selector:
    app: ingress-test
  ports:
  # Default port used by the image
  - port: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  namespace: ingress-test
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/ingress-test"
        backend:
          service:
            name: ingress-test
            port:
              number: 5678
